fix: increase counter size on mobile

--- a/src/components/content/complete/complete.scss
+++ b/src/components/content/complete/complete.scss
@@ -51,6 +51,6 @@
 /* Portrait and Landscape */
 @media only screen and (min-width: 375px) and (max-width: 812px) {
   .complete-counter {
-    font-size: 10px;
+    font-size: 0.75rem;
   }
 }
